Source/JavaScriptCore/runtime/Options.h
@@ -338,6 +338,7 @@ typedef const char* optionString;
     v(unsigned, fireOSRExitFuzzAtOrAfter, 0, nullptr) \
     \
     v(bool, logB3PhaseTimes, false, nullptr) \
+    v(double, rareBlockPenalty, 0.001, nullptr) \
     \
     v(bool, useDollarVM, false, "installs the $vm debugging tool in global objects") \
     v(optionString, functionOverrides, nullptr, "file with debugging overrides for function bodies") \
